# geometry-sandbox

./: .bazelrc  .clang-format  .clangd  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  main.cpp  renovate.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/scripts/: post-create.sh  setup-workspace.sh  shared-utils.sh
.devcontainer/scripts/tests/: test-build.sh  test-config.sh  test-docker.sh  test-ports.sh  test-registry-cache.sh  test-resources.sh  test-tools.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  test_devcontainer.yml
bazel/: BUILD  BUILD.libigl  BUILD.openvdb  BUILD.triangle  extensions.bzl
examples/: BUILD.bazel  cpp23_demo.cpp
lib/geometry/: BUILD.bazel  geometry.cpp  geometry.h  geometry_test.cpp
lib/math_utils/: BUILD.bazel  math_utils.cpp  math_utils.h  math_utils_test.cpp
lib/mesh/: BUILD  background.h
scripts/: enter_devcontainer.sh
src/: BUILD  main.cpp
tests/: BUILD  cgal_tests.cpp  eigen_tests.cpp  geogram_tests.cpp  integration_tests.cpp  libigl_tests.cpp  triangle_tests.cpp
tools/compile_commands/: BUILD
