"""
This MODULE.bazel file defines external dependencies and repositories for the geometry_sandbox project.
"""
module(
    name = "geometry_sandbox",
    version = "1.0.0",
    bazel_compatibility = [">=8.0.0"],
)

# C++ rules
bazel_dep(name = "rules_cc", version = "0.2.0")

# For external dependencies that don't have Bazel modules, we need to use module extensions.
non_module_deps = use_extension("//external/bazel:extensions.bzl", "non_module_deps")
use_repo(non_module_deps, "openvdb", "eigen", "libigl", "triangle")
