load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "geometry",
    srcs = ["geometry.cpp"],
    hdrs = ["geometry.h"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-Werror",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "geometry_test",
    srcs = ["geometry_test.cpp"],
    deps = [
        ":geometry",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
    ],
)
